XML made, DatabaseHandler.java created and initial table creation and function declarations set up.

--- a/NotesApp/app/src/main/res/values/strings.xml
+++ b/NotesApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NotesApp</string>
+    <string name="plus_sign">+</string>
+    <string name="home_page_title">Notes App</string>`
 </resources>
